# aic

./: .gitignore  CLAUDE.md  README.md  pixi.toml  pixi_env_setup.sh  test_act_data_loading.py  test_act_training.py  test_simple_act.py  train_act_simple.py
.github/workflows/: pixi.yml  test.yml
aic_adapter/src/: aic_adapter.cpp
aic_bringup/config/: ros_gz_bridge_config.yaml
aic_bringup/rviz/: aic.rviz
aic_example_policies/: README.md  package.xml
aic_example_policies/aic_example_policies/ros/: CheatCodeDataCollector.py  README.md  RunACT.py  RunRLT.py  WaveArm.py
aic_utils/: generate_synthetic_data.py
ch_milestones/: README.md  package.xml  pixi.toml  setup.cfg  setup.py
ch_milestones/ch_milestones/config/: policy_config.py  randomization_config.py  scene_config.py  task_config.py  task_options.py
ch_milestones/ch_milestones/environment/: description.py  entities.py  randomization.py  reset_client.py  resetter.py  robot.py  services.py
ch_milestones/ch_milestones/nodes/: data_producer.py  environment_resetter.py
ch_milestones/ch_milestones/policies/: OraclePolicy.py  cartesian_trajectory.py  ground_truth_guidance.py  oracle_debug_frames.py  oracle_frames.py  oracle_motion.py  oracle_stage_base.py  oracle_stages.py  oracle_validation.py  stage_approach.py  stage_coarse_align.py  stage_fine_align.py  stage_insert.py
ch_milestones/ch_milestones/recording/: episode_trim.py  lerobot_format.py  stage_episode_recorder.py
ch_milestones/launch/: ch_milestone_data_collection.launch.py
ch_milestones/test/: test_policy_config.py  test_randomization_config.py  test_task_configuration.py
docker/: docker-compose.yaml
docs/: aic_interfaces.md  board_movement_detection.md  getting_started.md  policy.md  zenoh_acl.md
scripts/: convert_lerobot_to_xvla.py  exp_term1_empty_policy.sh  exp_term2_eval_gui.sh  fix_merged_meta.py  gen_meta.py  serve_phase.sh  setup_case.sh  term0_zenoh.sh  term1_serve.sh  term2_policy.sh  term3_eval.sh  train_classifier.sh  train_xvla_approach.sh  train_xvla_coarse-align.sh  train_xvla_fine-align.sh  train_xvla_insert.sh  train_xvla_phases.sh  visualize_episode.py
(+67 files in other folders)
